2014-11-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoGeneric.pm: added support for
	CISCO-SYSTEM-EXT-MIB (mainly needed for Cisco Nexus)

2014-11-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Albis_ULAF.pm (discover):
	new discovery parameter: Albis_ULAF::mp-name-filter

	* perllib/Torrus/DevDiscover/CiscoIOS.pm: support for Cisco Nexus;
	persistent ifIndex for Nexus

2014-10-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Fortinet.pm: new discovery module for
	Fortinet products

2014-10-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Torrus release 2.08

2014-09-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm: Bugfix in discovery
	sequence. This bug was invisible up to perl v5.18.0. Now Perl
	randomizes hash keys on every loop.

2014-08-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RPC.pm: new RPC method: TIMESERIES

2014-07-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/UcdSnmp.pm: Loopback interfaces
	filtered out

2014-05-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC4293_IP_MIB.pm: New params:
	RFC4293_IP_MIB::tokenset-members,
	RFC4293_IP_MIB::ipv4-external-serviceid,
	RFC4293_IP_MIB::ipv6-external-serviceid,
	New selector action: TokensetMember

2014-05-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm: Improved interface
	indexing for unknown devices. New parameters:
	RFC2863_IF_MIB::name-hint
	RFC2863_IF_MIB::comment-hint

2014-05-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm: new discovery parameter:
	CiscoIOS::ifindex-persist

2014-04-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
