@@ -36,16 +36,17 @@ use Torrus::SiteConfig;
 
 exit(1) unless Torrus::SiteConfig::verify();
 
-our $tree;
-our $nodaemon;
-our $runonce;
-our $delay = 0;
-our $debug;
-our $verbose;
-our $help_needed;
+my $tree;
+my $nodaemon;
+my $runonce;
+my $runalways;
+my $delay = 0;
+my $debug;
+my $verbose;
+my $help_needed;
 
 # Derive the process name from the command line
-our $process_name = $0;
+my $process_name = $0;
 $process_name =~ s/^.*\/([^\/]+)$/$1/;
 $process_name .= ' ' . join(' ', @ARGV);
 
@@ -53,6 +54,7 @@ $process_name .= ' ' . join(' ', @ARGV);
 my $ok = GetOptions ('tree=s'   => \$tree,
                      'nodaemon' => \$nodaemon,
                      'runonce'  => \$runonce,
+                     'runalways' => \$runalways,
                      'delay=i'  => \$delay,
                      'debug'    => \$debug,
                      'verbose'  => \$verbose,
@@ -65,6 +67,7 @@ if( not $ok or not $tree or $help_needed or scalar(@ARGV) > 0 )
     "  --tree=NAME     tree name\n",
     "  --nodaemon      do not fork daemon and log to STDERR\n",
     "  --runonce       run one time and exit. Implies --nodaemon\n",
+    "  --runalways     continue running if no monitors defined\n",
     "  --delay         delay the start of the first cycle, minutes\n",
     "  --debug         set the log level to debug\n",
     "  --verbose       set the log level to info\n",
@@ -163,6 +166,10 @@ my %options =
 if( $runonce )
 {
     $options{'-RunOnce'} = 1;
+}
+if( $runalways or $Torrus::Monitor::runAlways )
+{
+    $options{'-RunAlways'} = 1;
 }
 
 my $scheduler = new Torrus::MonitorScheduler( %options );
